deployment/ingress-nginx/ingress-nginx-config.yaml
### Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # Strip path prefix, removing /api-*
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api-product/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product
                port:
                  number: 8080
          - path: /api-cart/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cart
                port:
                  number: 1323
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
